<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".CrearContactoActivity">

    <TextView
        android:id="@+id/tvDatosContacto"
        android:layout_alignParentTop="true"
        android:text="@string/datosContacto"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tvNombre"
        android:layout_below="@+id/tvDatosContacto"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="10dp"
        android:text="@string/nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/etNombre"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@+id/tvNombre"
        android:layout_alignParentRight="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tvTelefono"
        android:layout_marginTop="20dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tvNombre"
        android:text="@string/telefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/etTelefono"
        android:layout_toRightOf="@+id/tvTelefono"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tvNombre"
        android:inputType="phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tvIcono"
        android:layout_below="@+id/tvTelefono"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="40dp"
        android:text="@string/icono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ImageButton
        android:id="@+id/ibIcono"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/etTelefono"
        android:layout_toRightOf="@+id/tvIcono"
        android:onClick="onClickCategoria"
        android:background="@drawable/cat_amigos"
        android:tag="0"
        android:layout_marginLeft="10dp"
        android:layout_width="50dp"
        android:layout_height="50dp" />

    <Button
        android:id="@+id/btAceptar"
        android:textColor="#FFF"
        android:background="@drawable/borde_boton"
        android:layout_alignParentBottom="true"
        android:onClick="onClickAceptar"
        android:layout_marginTop="10dp"
        android:text="@string/aceptar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>